<resources>
    <string name="app_name">My Application</string>
    <string name="login_message">Bienvenido a tu nueva aventura</string>
    <string name="login_message2">¿No te encuentras registrado?</string>
    <string name="login_button_loginGoogle">Iniciar sesión con Google</string>
    <string name="login_button_loginEmail">Iniciar sesión con correo</string>
    <string name="login_button_register">Registrarme</string>
    <string name="register_name">Registrarme</string>
    <string name="register_email">Correo</string>
    <string name="register_names">Nombres</string>
    <string name="register_lastNames">Apellidos</string>
    <string name="register_phone">Teléfono</string>
    <string name="register_password">Contraseña</string>
    <string name="register_addAccount">Crear cuenta</string>
    <string name="register_message1">Al crear tu cuenta aceptas nuestros</string>
    <string name="register_message2">Términos y condiciones</string>
    <string name="title_activity_main_menu">MainActivityMenu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_trips">Viajes</string>
    <string name="title_search">Buscar</string>
    <string name="title_newPlace">Agregar</string>
    <string name="title_profile">Perfil</string>
    <string name="title_map">Destinos Marcados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_email">LoginEmailActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginEmail_title">Ingrese correo</string>
    <string name="loginEmail_email">Correo</string>
    <string name="loginEmail_password">Contraseña</string>
    <string name="loginEmail_login">Ingresar</string>
    <string name="menu01_search">Buscar</string>
    <string name="title_homeSelect">Selección de destinos</string>
    <string name="fragmentHomeSelect_buttonToDo">To do</string>
    <string name="fragmentAddPlace_title">Solicita ingresar tu destino favorito</string>
    <string name="fragmentAddPlace_name">Nombre</string>
    <string name="fragmentAddPlace_buttonAdd">Enviar solicitud</string>
    <string name="fragmentAddPlace_gps">Ubicación GPS</string>
    <string name="fragmentAddPlace_description">Descripción</string>
    <string name="title_homeSelect2">Ubicaciones</string>


    <!--Profile-->
    <string name="profile_title"> PERFIL PERSONAL </string>
    <string name="name_profile">Nombre </string>
    <string name="lastname_profile">Apellidos </string>
    <string name="phone_profile">Celular</string>
    <string name="email_profile">Correo electrónico</string>
    <string name="pass1_profile">Contraseña actual</string>
    <string name="pass2_profile">Contraseña nueva</string>
    <string name="save_button_profile">Guardar Cambios</string>
    <string name="title_password_profile">Cambiar Contraseña</string>

</resources>