<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.viajeros.pe.ui.home.HomeFragment"
        android:label="@string/title_trips"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.viajeros.pe.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.viajeros.pe.ui.addPlace.AddPlaceFragment"
        android:label="@string/title_newPlace"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.viajeros.pe.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_homeSelect"
        android:name="com.viajeros.pe.ui.home.HomeSelectFragment"
        android:label="@string/title_homeSelect"
        tools:layout="@layout/fragment_home_select" />

    <fragment
        android:id="@+id/navigation_homeSelect2"
        android:name="com.viajeros.pe.ui.home.HomeSelect2Fragment"
        android:label="@string/title_homeSelect2"
        tools:layout="@layout/fragment_home_select2" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.viajeros.pe.ui.home.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.viajeros.pe.ui.home.TodoFragment"
        android:label="ToDo"
        tools:layout="@layout/fragment_todo" />
</navigation>