<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background1"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center|center_vertical"
            android:text="@string/login_message" />
        <Space
            android:layout_width="1dp"
            android:layout_height="60dp"/>
        <Button
            android:id="@+id/login_buttonLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#DC143C"
            android:text="@string/login_button_loginGoogle" />
        <Space
            android:layout_width="1dp"
            android:layout_height="25dp"/>
        <Button
            android:id="@+id/login_buttonLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#ADCD2C"
            android:text="@string/login_button_loginEmail" />
        <Space
            android:layout_width="1dp"
            android:layout_height="75dp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:textSize="18sp"
            android:text="@string/login_message2" />
        <Space
            android:layout_width="1dp"
            android:layout_height="15dp"/>
        <Button
            android:id="@+id/login_buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#1C9637"
            android:text="@string/login_button_register" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>