<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_users" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Space
            android:layout_width="1dp"
            android:layout_height="25dp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_email"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/register_editText_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#2D2C2C"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="5dp" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_names"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/register_editText_names"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#2D2C2C"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="5dp" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_lastNames"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/register_editText_lastNames"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#2D2C2C"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="5dp" />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_phone"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/register_editText_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#2D2C2C"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/register_editText_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#2D2C2C"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="35dp" />
        <Button
            android:id="@+id/register_button_addAccount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#1C9637"
            android:text="@string/register_addAccount"/>
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_message1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_message2"
            android:gravity="center"
            android:textColor="#CF3C3C"
            android:textSize="12sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>