<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginEmailActivity"
    android:background="@drawable/background1"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over"   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginEmail_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginEmail_email"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmail_editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#888080"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginEmail_password"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmail_editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#888080"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/loginEmail_buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#1C9637"
            android:text="@string/loginEmail_login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>