<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addPlace.AddPlaceFragment"
    android:background="@drawable/background1"
    android:backgroundTint="#85FFFFFF"
    android:backgroundTintMode="src_over">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddPlace_title"
            android:textColor="#000000"
            android:textSize="35sp"
            android:gravity="left"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />
        <!--                    -->
        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddPlace_name"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/fragmentAddPlace_editTextName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#888080"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />
        <!--                    -->
        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddPlace_gps"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/fragmentAddPlace_editTextGps"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#888080"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />
        <!--                    -->
        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddPlace_description"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/fragmentAddPlace_editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#888080"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />
        <!--                    -->

        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />
        <!--                    -->

        <Button
            android:id="@+id/fragmentAddPlace_buttonAddPlace"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#1C9637"
            android:text="@string/fragmentAddPlace_buttonAdd" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>